# ZenTables

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml
.github/workflows/: run_tests.yml
notebooks/: ZenTables Demo.ipynb
src/notebooks/: Suppression Testing.ipynb  ZenTables Demo.ipynb  supp_test.py
src/zentables/: __init__.py  accessor.py  accessors.py  options.py  pretty_styler.py  style.py  utils.py  zentables.py
src/zentables/templates/: prettyhtml.tpl
tests/: Suppression Testing.ipynb  supp_test.py  test_accessors.py  test_suppression.py  test_zentables.py
tests/fixtures/: superstore.csv
