[tool.poetry]
name = "ZenTables"
version = "0.2.0b2"
description = "Stress-free descriptive tables in Python."
authors = [
    "Paul Xu <yang_xu@brown.edu>",
    "The Policy Lab <thepolicylab@brown.edu>"
]
license = "MIT"
packages = [
    { include = "zentables", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"
Jinja2 = "^3.0.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"
pytest = "^6.2.1"
isort = "^5.7.0"
ipdb = "^0.13.4"
pytest-asyncio = "^0.14.0"
nb-black = "^1.0.7"
jupyterlab = "^3.0.16"
mypy = "^0.910"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pylint.basic]
good-names = "i,j,k,ex,Run,_,df,pc"

[tool.pylint.messages_control]
disable = "C0330, C0326, R0912, R0913, R0914, R0915"

[tool.pylint.format]
max-line-length = "88"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"